Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18427

Magnify "lost forever" when minimized

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None

    Description

      reactos-bootcd-0.4.15-dev-5075-g34635e1-x86-gcc-lin-dbg

      • Open Magnify
      • Minimize all (Win+D)
      • Magnify is running, systray icon visible but no longer able to display Magnify main window or settings again
      • (Taskmgr => Kill is the only option)

      Attachments

        1. AutoDontMinimize.zip
          198 kB
        2. AutoDontMinimize-1.zip
          139 kB
        3. AutoDontMinimize-output.tsv.zip
          74 kB
        4. CheckTopMost.cpp
          1 kB
        5. DialogTest.zip
          28 kB
        6. DontMinimize.zip
          26 kB
        7. DontMinimize-1.zip
          30 kB

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            KRosUser KRosUser
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: